@@ -5,18 +5,21 @@ import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.TypeReference;
 import com.github.wangji92.arthas.plugin.common.pojo.AgentInfo;
 import com.github.wangji92.arthas.plugin.utils.HttpUtil;
+import com.github.wangji92.arthas.plugin.utils.StringUtils;
 import com.github.wangji92.arthas.plugin.utils.TunnelServerPath;
+import lombok.extern.slf4j.Slf4j;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * @author imyzt
  * @date 2024/08/28
  * @description 封装与Arthas Tunnel Server通信部分逻辑
  */
+@Slf4j
 public class ArthasTunnelServerService {
 
     /**
@@ -27,7 +30,19 @@ public class ArthasTunnelServerService {
     public List<String> getAppIdList(String tunnelAddress) {
         String appsUrl = TunnelServerPath.getAppsPath(tunnelAddress);
         String resp = HttpUtil.get(appsUrl);
-        return JSON.parseArray(resp).toJavaList(String.class).stream().sorted().collect(Collectors.toList());
+        if (StringUtils.isBlank(resp)) {
+            return Collections.emptyList();
+        }
+        List<String> appIds = Collections.emptyList();
+        try {
+            appIds = Optional.ofNullable(resp)
+                    .map(JSON::parseArray)
+                    .map(arr -> arr.toJavaList(String.class))
+                    .orElse(Collections.emptyList());
+        } catch (Exception e) {
+            log.error(String.format("queryAppFail, url=%s", tunnelAddress), e);
+        }
+        return appIds.stream().sorted().toList();
     }
 
     /**
@@ -39,6 +54,9 @@ public class ArthasTunnelServerService {
     public Map<String, AgentInfo> getAgentInfoMap(String tunnelAddress, String appId) {
         String agentsUrl = TunnelServerPath.getAgentInfoPath(tunnelAddress, appId);
         String resp = HttpUtil.get(agentsUrl);
+        if (StringUtils.isBlank(resp)) {
+            return Collections.emptyMap();
+        }
         return getAgentInfoMap(resp);
     }
 
@@ -53,6 +71,6 @@ public class ArthasTunnelServerService {
         })).map(infoMap -> {
             infoMap.keySet().forEach(id -> infoMap.get(id).setAgentId(id));
             return infoMap;
-        }).orElse(null);
+        }).orElse(Collections.emptyMap());
     }
 }
